reports/Untitled0.err.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/dist-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.9/dist-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.9/dist-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.9/dist-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.9/dist-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.9/dist-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/usr/local/lib/python3.9/dist-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
SERVER = 'Server'
DATABASE = 'prosain200411100120_sepallength'
DRIVER = 'SQL Server Native Client 15.0'
USERNAME = 'postgres'
PASSWORD = 'sholeh841'
DATABASE_CONNECTION = f'mssql://{USERNAME}:{PASSWORD}@{SERVER}
------------------

[0;36m  File [0;32m"<ipython-input-2-bfa717d2f70c>"[0;36m, line [0;32m6[0m
[0;31m    DATABASE_CONNECTION = f'mssql://{USERNAME}:{PASSWORD}@{SERVER}[0m
[0m                                                                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m EOL while scanning string literal

SyntaxError: EOL while scanning string literal (<ipython-input-2-bfa717d2f70c>, line 6)

